Update krwalr scripts

--- a/projects/koder/groq_code_assistant.ipynb
+++ b/projects/koder/groq_code_assistant.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup as Soup\n",
     "from langchain_community.document_loaders.recursive_url_loader import RecursiveUrlLoader\n",
-    "\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n",
     "# LCEL docs\n",
     "url = \"https://langchain-ai.github.io/langgraph/tutorials/multi_agent/hierarchical_agent_teams/\"\n",
     "loader = RecursiveUrlLoader(\n",
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hmazomba\\AppData\\Local\\Temp\\ipykernel_21348\\1506048698.py:3: LangChainBetaWarning: Introduced in 0.2.24. API subject to change.\n",
-      "  rate_limiter = InMemoryRateLimiter(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_core.rate_limiters import InMemoryRateLimiter\n",
     "\n",
@@ -50,12 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_ollama import ChatOllama\n",
     "from pydantic import BaseModel, Field\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -91,22 +83,27 @@
     "    code: str = Field(description=\"Code block not including import statements\")\n",
     "\n",
     "\n",
-    "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-pro-exp-0827\")\n",
-    "code_gen_chain_oai = code_gen_prompt | llm.with_structured_output(code)\n",
+    "google_llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-pro-exp-0827\")\n",
+    "ollama_llm = ChatOllama(\n",
+    "    model = \"llama3.1:8b\",\n",
+    "    temperature = 0.4,\n",
+    "    # other params ...\n",
+    ")\n",
+    "code_gen_chain_oai = code_gen_prompt | ollama_llm.with_structured_output(code)\n",
     "question = \"How do I build a RAG chain in LCEL?\"\n",
     "solution = code_gen_chain_oai.invoke({\"context\":concatenated_content,\"messages\":[(\"user\",question)]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prefix='You can build a RAG chain by defining a `retriever` object, `llm`, and a graph with two nodes, \"retrieve\" and \"answer\".\\\\n\\\\nHere is an example of a simple RAG chain for a CSV file:' imports='from langgraph import StateGraph\\\\nfrom langchain.chains import RetrievalQA\\\\nfrom langchain.vectorstores import FAISS\\\\nfrom langchain.embeddings import OpenAIEmbeddings\\\\nfrom langchain.chat_models import ChatOpenAI\\\\nfrom langchain.document_loaders.csv_loader import CSVLoader\\\\n\\\\n# Define retriever, llm, and any formatting logic\\\\nloader = CSVLoader(file_path=\"path/to/your/file.csv\")\\\\ndocs = loader.load()\\\\nembeddings = OpenAIEmbeddings()\\\\ndb = FAISS.from_documents(docs, embeddings)\\\\nretriever = db.as_retriever()\\\\nllm = ChatOpenAI()\\\\n\\\\ndef format_docs(docs):\\\\n    return \"\\\\\\\\n\\\\\\\\n\".join([d.page_content for d in docs])' code='graph = StateGraph()\\\\ngraph.add_node(\"retrieve\", retriever | format_docs)\\\\ngraph.add_node(\"answer\", llm)\\\\ngraph.add_edge(\"retrieve\", \"answer\")\\\\nchain = graph.compile()'\n"
+      "prefix='Building a RAG Chain in LCEL' imports='import pandas as pd; import numpy as np' code=\"pd.DataFrame({'A': [1, 2, 3], 'B': [4, 5, 6]})\"\n"
      ]
     }
    ],
@@ -116,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +136,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "structured_llm_gemini = llm.with_structured_output(code, include_raw=True)\n",
+    "structured_llm_gemini = google_llm.with_structured_output(code, include_raw=True)\n",
     "\n",
     "\n",
     "# Optional: Check for errors in case tool use is flaky\n",
@@ -213,14 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prefix='You can build a simple RAG chain by creating a `StateGraph` in LCEL with a retriever that fetches documents and an LLM that processes them. Here is an example:' imports='from langgraph.graph import StateGraph, START, END' code='graph = StateGraph()\\\\ngraph.add_node(\"retriever\", retriever)\\\\ngraph.add_node(\"llm\", llm)\\\\ngraph.add_edge(START, \"retriever\")\\\\ngraph.add_edge(\"retriever\", \"llm\")\\\\ngraph.add_edge(\"llm\", END)\\\\n\\\\nchain = graph.compile()'\n"
+      "prefix='You can build a RAG chain by creating a `StateGraph` in LangGraph. First, define a retriever which will fetch the relevant documents. Then, define an LLM that will process the documents and answer the question. Finally, add the nodes to the graph and connect them with edges.' imports='from langgraph import StateGraph, START, END' code='graph = StateGraph()\\\\ngraph.add_node(\"retriever\", retriever)\\\\ngraph.add_node(\"llm\", llm)\\\\ngraph.add_edge(START, \"retriever\")\\\\ngraph.add_edge(\"retriever\", \"llm\")\\\\ngraph.add_edge(\"llm\", END)\\\\n\\\\nchain = graph.compile()'\n"
      ]
     }
    ],
@@ -234,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,16 +463,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---GENERATING CODE SOLUTION---\n",
+      "---GENERATING CODE SOLUTION---\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "---CHECKING CODE---\n",
-      "---CODE BLOCK CHECK: FAILED---\n",
+      "---CODE IMPORT CHECK: FAILED---\n",
       "---DECISION: RE-TRY SOLUTION---\n",
       "---GENERATING CODE SOLUTION---\n",
       "---CHECKING CODE---\n",
@@ -495,16 +498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "code(prefix='You can use the `get_last_message` function to extract a string from the \"messages\" field, which you can then pass to your runnable. For example, if your runnable expects a string in a field called \"input\", you could do the following:', imports='from langchain_core.messages import HumanMessage', code='return {\"input\": state[\"messages\"][-1].content}')"
+       "code(prefix='You can use a Runnable to accomplish this. Create a Runnable that takes in a message string and adds it to the state with the key \"input\". ', imports='from langchain.schema import HumanMessage', code='state = dict(state)\\\\nstate[\"input\"] = message\\\\nreturn state')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -552,10 +555,10 @@
     {
      "data": {
       "text/plain": [
-       "code(prefix='This code defines a specialized team structure for SEO optimization using the langgraph framework. It defines individual agents for each role (SEO Expert, UI/UX Expert, Content Developer, and Copywriter), a supervisor agent to manage the workflow, and a state graph to define the interactions and control flow between them.  You will need to define the specific tools for each agent based on your requirements.  Replace the `[...]` with the appropriate tools from the langchain library.  ', imports='import functools\\\\nimport operator\\\\n\\\\nfrom langchain_core.messages import BaseMessage, HumanMessage\\\\nfrom langchain_openai.chat_models import ChatOpenAI\\\\nfrom langgraph.prebuilt import create_react_agent\\\\n\\\\nfrom langgraph.graph import StateGraph, END, START', code='from typing import List, Optional\\\\nfrom langchain.output_parsers.openai_functions import JsonOutputFunctionsParser\\\\nfrom langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\\\\nfrom langchain_openai import ChatOpenAI\\\\nfrom langchain_core.messages import HumanMessage\\\\n\\\\ndef agent_node(state, agent, name):\\\\n    result = agent.invoke(state)\\\\n    return {\"messages\": [HumanMessage(content=result[\"messages\"][-1].content, name=name)]}\\\\n\\\\ndef create_team_supervisor(llm: ChatOpenAI, system_prompt, members) -> str:\\\\n    \"\"\"An LLM-based router.\"\"\"\\\\n    options = [\"FINISH\"] + members\\\\n    function_def = {\\\\n        \"name\": \"route\",\\\\n        \"description\": \"Select the next role.\",\\\\n        \"parameters\": {\\\\n            \"title\": \"routeSchema\",\\\\n            \"type\": \"object\",\\\\n            \"properties\": {\\\\n                \"next\": {\\\\n                    \"title\": \"Next\",\\\\n                    \"anyOf\": [\\\\n                        {\"enum\": options},\\\\n                    ],\\\\n                },\\\\n            },\\\\n            \"required\": [\"next\"],\\\\n        },\\\\n    }\\\\n    prompt = ChatPromptTemplate.from_messages(\\\\n        [\\\\n            (\"system\", system_prompt),\\\\n            MessagesPlaceholder(variable_name=\"messages\"),\\\\n            (\\\\n                \"system\",\\\\n                \"Given the conversation above, who should act next?\"\\\\n                \" Or should we FINISH? Select one of: {options}\",\\\\n            ),\\\\n        ]\\\\n    ).partial(options=str(options), team_members=\", \".join(members))\\\\n    return (\\\\n        prompt\\\\n        | llm.bind_functions(functions=[function_def], function_call=\"route\")\\\\n        | JsonOutputFunctionsParser()\\\\n    )\\\\n\\\\n# Define the specialized team structure\\\\nseo_expert_agent = create_react_agent(llm, tools=[...]) # Define SEO tools\\\\nseo_expert_node = functools.partial(agent_node, agent=seo_expert_agent, name=\"SEO Expert\")\\\\n\\\\nui_ux_expert_agent = create_react_agent(llm, tools=[...]) # Define UI/UX tools\\\\nui_ux_expert_node = functools.partial(agent_node, agent=ui_ux_expert_agent, name=\"UI/UX Expert\")\\\\n\\\\ncontent_developer_agent = create_react_agent(llm, tools=[...]) # Define Content Dev tools\\\\ncontent_developer_node = functools.partial(agent_node, agent=content_developer_agent, name=\"Content Developer\")\\\\n\\\\ncopywriter_agent = create_react_agent(llm, tools=[...]) # Define Copywriter tools\\\\ncopywriter_node = functools.partial(agent_node, agent=copywriter_agent, name=\"Copywriter\")\\\\n\\\\nsupervisor_agent = create_team_supervisor(\\\\n    llm,\\\\n    \"You are a supervisor tasked with managing a conversation between the\"\\\\n    \" following workers: SEO Expert, UI/UX Expert, Content Developer, Copywriter. Given the following user request,\"\\\\n    \" respond with the worker to act next. Each worker will perform a\"\\\\n    \" task and respond with their results and status. When finished,\"\\\\n    \" respond with FINISH.\",\\\\n    [\"SEO Expert\", \"UI/UX Expert\", \"Content Developer\", \"Copywriter\"],\\\\n)\\\\n\\\\n# Create the state graph\\\\nspecialized_team_graph = StateGraph(...)\\\\nspecialized_team_graph.add_node(\"SEO Expert\", seo_expert_node)\\\\nspecialized_team_graph.add_node(\"UI/UX Expert\", ui_ux_expert_node)\\\\nspecialized_team_graph.add_node(\"Content Developer\", content_developer_node)\\\\nspecialized_team_graph.add_node(\"Copywriter\", copywriter_node)\\\\nspecialized_team_graph.add_node(\"supervisor\", supervisor_agent)\\\\n\\\\n# Define the control flow\\\\nspecialized_team_graph.add_edge(\"SEO Expert\", \"supervisor\")\\\\nspecialized_team_graph.add_edge(\"UI/UX Expert\", \"supervisor\")\\\\nspecialized_team_graph.add_edge(\"Content Developer\", \"supervisor\")\\\\nspecialized_team_graph.add_edge(\"Copywriter\", \"supervisor\")\\\\nspecialized_team_graph.add_conditional_edges(\\\\n    \"supervisor\",\\\\n    lambda x: x[\"next\"],\\\\n    {\\\\n        \"SEO Expert\": \"SEO Expert\",\\\\n        \"UI/UX Expert\": \"UI/UX Expert\",\\\\n        \"Content Developer\": \"Content Developer\",\\\\n        \"Copywriter\": \"Copywriter\",\\\\n        \"FINISH\": END,\\\\n    },\\\\n)\\\\nspecialized_team_graph.add_edge(START, \"supervisor\")\\\\nspecialized_team_chain = specialized_team_graph.compile()')"
+       "code(prefix='This code defines a team structure with an SEO Expert, UI/UX Expert, Content Developer, and Copywriter, managed by a supervisor agent. Each expert agent will have its own set of relevant tools.  Replace the placeholders for tools with actual tools based on the available LangChain integrations. ', imports='from typing import List, Optional\\\\nfrom langchain.output_parsers.openai_functions import JsonOutputFunctionsParser\\\\nfrom langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\\\\nfrom langchain_openai import ChatOpenAI\\\\nfrom langgraph.graph import END, StateGraph, START\\\\nfrom langchain_core.messages import HumanMessage, trim_messages\\\\nfrom langgraph.prebuilt import create_react_agent', code='from typing import List, Optional\\\\nfrom langchain.output_parsers.openai_functions import JsonOutputFunctionsParser\\\\nfrom langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\\\\nfrom langchain_openai import ChatOpenAI\\\\nfrom langgraph.graph import END, StateGraph, START\\\\nfrom langchain_core.messages import HumanMessage, trim_messages\\\\nfrom langgraph.prebuilt import create_react_agent\\\\n\\\\nllm = ChatOpenAI(model=\"gpt-4o-mini\")\\\\n\\\\ntrimmer = trim_messages(\\\\n    max_tokens=100000,\\\\n    strategy=\"last\",\\\\n    token_counter=llm,\\\\n    include_system=True,\\\\n)\\\\n\\\\ndef agent_node(state, agent, name):\\\\n    result = agent.invoke(state)\\\\n    return {\\\\n        \"messages\": [HumanMessage(content=result[\"messages\"][-1].content, name=name)]\\\\n    }\\\\n\\\\ndef create_team_supervisor(llm: ChatOpenAI, system_prompt, members) -> str:\\\\n    \"\"\"An LLM-based router.\"\"\"\\\\n    options = [\"FINISH\"] + members\\\\n    function_def = {\\\\n        \"name\": \"route\",\\\\n        \"description\": \"Select the next role.\",\\\\n        \"parameters\": {\\\\n            \"title\": \"routeSchema\",\\\\n            \"type\": \"object\",\\\\n            \"properties\": {\\\\n                \"next\": {\\\\n                    \"title\": \"Next\",\\\\n                    \"anyOf\": [\\\\n                        {\"enum\": options},\\\\n                    ],\\\\n                },\\\\n            },\\\\n            \"required\": [\"next\"],\\\\n        },\\\\n    }\\\\n    prompt = ChatPromptTemplate.from_messages(\\\\n        [\\\\n            (\"system\", system_prompt),\\\\n            MessagesPlaceholder(variable_name=\"messages\"),\\\\n            (\\\\n                \"system\",\\\\n                \"Given the conversation above, who should act next?\"\\\\n                \" Or should we FINISH? Select one of: {options}\",\\\\n            ),\\\\n        ]\\\\n    ).partial(options=str(options), team_members=\", \".join(members))\\\\n    return (\\\\n        prompt\\\\n        | trimmer\\\\n        | llm.bind_functions(functions=[function_def], function_call=\"route\")\\\\n        | JsonOutputFunctionsParser()\\\\n    )\\\\n\\\\n# Define SEO Expert Agent\\\\nseo_expert_agent = create_react_agent(llm, tools=[...]) # Add relevant SEO tools here\\\\nseo_expert_node = functools.partial(agent_node, agent=seo_expert_agent, name=\"SEO Expert\")\\\\n\\\\n# Define UI/UX Expert Agent\\\\nui_ux_expert_agent = create_react_agent(llm, tools=[...]) # Add relevant UI/UX tools here\\\\nui_ux_expert_node = functools.partial(agent_node, agent=ui_ux_expert_agent, name=\"UI/UX Expert\")\\\\n\\\\n# Define Content Developer Agent\\\\ncontent_developer_agent = create_react_agent(llm, tools=[...]) # Add relevant content development tools here\\\\ncontent_developer_node = functools.partial(agent_node, agent=content_developer_agent, name=\"Content Developer\")\\\\n\\\\n# Define Copywriter Agent\\\\ncopywriter_agent = create_react_agent(llm, tools=[...]) # Add relevant copywriting tools here\\\\ncopywriter_node = functools.partial(agent_node, agent=copywriter_agent, name=\"Copywriter\")\\\\n\\\\n# Define Team Supervisor\\\\nsupervisor_agent = create_team_supervisor(\\\\n    llm,\\\\n    \"You are a supervisor tasked with managing a conversation between the\"\\\\n    \" following workers: SEO Expert, UI/UX Expert, Content Developer, Copywriter. Given the following user request,\"\\\\n    \" respond with the worker to act next. Each worker will perform a\"\\\\n    \" task and respond with their results and status. When finished,\"\\\\n    \" respond with FINISH.\",\\\\n    [\"SEO Expert\", \"UI/UX Expert\", \"Content Developer\", \"Copywriter\"],\\\\n)\\\\n\\\\n# Define the graph\\\\ngraph = StateGraph(...)\\\\ngraph.add_node(\"SEO Expert\", seo_expert_node)\\\\ngraph.add_node(\"UI/UX Expert\", ui_ux_expert_node)\\\\ngraph.add_node(\"Content Developer\", content_developer_node)\\\\ngraph.add_node(\"Copywriter\", copywriter_node)\\\\ngraph.add_node(\"supervisor\", supervisor_agent)\\\\n\\\\n# Define the control flow\\\\ngraph.add_edge(\"SEO Expert\", \"supervisor\")\\\\ngraph.add_edge(\"UI/UX Expert\", \"supervisor\")\\\\ngraph.add_edge(\"Content Developer\", \"supervisor\")\\\\ngraph.add_edge(\"Copywriter\", \"supervisor\")\\\\ngraph.add_conditional_edges(\\\\n    \"supervisor\",\\\\n    lambda x: x[\"next\"],\\\\n    {\\\\n        \"SEO Expert\": \"SEO Expert\",\\\\n        \"UI/UX Expert\": \"UI/UX Expert\",\\\\n        \"Content Developer\": \"Content Developer\",\\\\n        \"Copywriter\": \"Copywriter\",\\\\n        \"FINISH\": END,\\\\n    },\\\\n)\\\\ngraph.add_edge(START, \"supervisor\")\\\\nchain = graph.compile()')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
